# exam-inf-2025

online-store/: CMakeLists.txt  README
online-store/include/: DatabaseConnection.h  models.h  payment.h
online-store/sql/: functions.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
online-store/src/: database.cpp  main.cpp  models.cpp  payment.cpp
