cmake_minimum_required(VERSION 3.10)
project(online_store)
set(CMAKE_CXX_STANDARD 17)
find_package(PkgConfig REQUIRED)
pkg_check_modules(PQXX REQUIRED libpqxx)
include_directories(${PQXX_INCLUDE_DIRS} include)
link_directories(${PQXX_LIBRARY_DIRS})
add_executable(online_store src/main.cpp src/database.cpp src/models.cpp src/payment.cpp)
target_link_libraries(online_store ${PQXX_LIBRARIES})
